--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+
+#logger
+logging.level.root=INFO
+logging.level.com.bridgelabz.employeepayroll=DEBUG
+logging.file.name=logs/app.log
