[Suraj] add. SL4FJ Logger added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.h2.console.path=/h2-console
 #logger
 logging.level.root=INFO
 logging.level.com.bridgelabz.employeepayroll=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - [%level] - %msg%n
 logging.file.name=logs/app.log
+
+
