--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=EmployeePayRoll
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:employeedb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+## H2 Database Configuration
+#spring.datasource.url=jdbc:h2:mem:employeedb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/EmployeePayroll?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Suraj@1629
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
 #logger
 logging.level.root=INFO
 logging.level.com.bridgelabz.employeepayroll=DEBUG
