--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.application.name=EmployeePayRoll
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/EmployeePayroll?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=Suraj@1629
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/EmployeePayroll?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Suraj@1629
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 #logger
 logging.level.root=INFO
